# gpiosvr

./: README.md  pyproject.toml
docs/: index.html
docs/html/: client.html  client_picod.html  client_pigpio.html  client_pigs.html  genindex.html  gpio_server.html  index.html  key.html  key_monitor.html  led.html  leds.html  modules.html  objects.inv  picossa.html  picossa_pigs.html  pigs.html  py-modindex.html  search.html  searchindex.js  shell.html  signal.html  signal_button.html  signal_ir.html  uart.html
docs/html/_static/: documentation_options.js  underscore.js
docsource/: client.rst  client_picod.rst  client_pigpio.rst  client_pigs.rst  conf.py  gpio_server.rst  index.rst  key.rst  key_monitor.rst  led.rst  leds.rst  modules.rst  picossa.rst  picossa_pigs.rst  pigs.rst  shell.rst  signal.rst  signal_button.rst  signal_ir.rst  uart.rst
picod/: picod.uf2
template/: 59-pico.rules  key_rc6-mce_config.json  pi_signal_config.json  pico_signal_button_config.json
templates/: key_monitor.service  pi_server.service  pi_signal_ir_config.json  pico_server.service
